data/derived/comb/progs/unify/prog7192.ml.out
Characters 143-145:
  let retTuple = (l1 * l2) in
                  ^^
Error: This expression has type 'a list
       but an expression was expected of type int
